crates/review-buddy/tests/snapshots/frames_v02__frame_dashboard_gitlab_tab_afterglow_dark_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                       Afterglow Dark
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Worth a look · 1                                                                                │
│▌ ✕ Cache pipeline status lookups                                                              7h │
│▌ GL flow!1182 · priya · you're mentioned              ○1                 CI failing        +8 −2 │
│                                                                                                  │
│  ▸ Noise · 1 bot update · ⏎ to expand                                                            │
│                                                                                                  │
│  ── That's everything.                                                                           │
│  2 in this view.                                                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ platform/flow!1182 ─────────────────────────────────────────────────────────────────────────── ▼ ╮
│ Cache pipeline status lookups                                                                    │
│ priya wants priya/status-cache → main                                                            │
│ +8 −2 · 1 file · opened 2d ago                                                                   │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 1   Checks 3   Conversation 0                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ The status panel asks for the same pipeline many times a second. This keeps results for a short  │
│ time to coax the load down. @smorris, does the TTL look right to you?                            │
│                                                                                                  │
│ Reviewers                                       Checks                                           │
│ ◌ tomas requested                               ● 2 passing  ✕ 1 failing                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
